style.css
body {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
}

.header {
    background-color: #1f2937;
    padding: 16px;
}

.header-content {
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
}

.logo {
    font-size: 24px;
    color: #f9faf8;
    font-weight: 600;
}

.navigation {
    font-size: 18px;
    color: #e5e7eb;
    list-style-type: none;
    display: flex;
    margin: 0;
    padding: 0;
    gap: 16px;
}

.hero {
    background-color: #1f2937;
    padding: 16px;
}

.hero-content {
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    margin: 48px auto;
    gap: 64px;
}

.hero-text {
    display: flex;
    flex-direction: column;
    gap: 24px;
    justify-content: center;
}

.hero-text .title {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
}

.hero-text div {
    font-size: 18px;
    color:#e5e7eb;
}

.hero img {
    width: 450px;
}

button {
    background-color: #3882f6;
    align-self: flex-start;
    padding: 12px 36px;
    font-size: 16px;
    border: none;
    border-radius: 8px;
    font-weight: 600;
    color:#f9faf8;
}

.cardzone {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 16px;
    height: 500px;
}

.items {
    display: flex;
    gap: 64px;

}

.card-title {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    padding: 48px;
}

.card img {
    width: 200px;
    border: 5px solid #265170;
    border-radius: 20px;
    box-sizing: border-box;
}

.card {
    flex-direction: column;
    display: flex;
    width: 200px;
    text-align: center;
    gap: 16px;
}

.review {
    background-color: #e5e7eb;
    height: 400px;
    padding: 16px;
    display: flex;
    flex-direction: column;
    gap: 16px;
    justify-content: center;
    align-items: center;
}

.review-text {
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
    width: 1200px;
}

.review-author {
    font-size: 24px;
    font-weight: 600;
    width: 1200px;
    text-align: right;
}

.promo {
    height: 400px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.promo-block {
    background-color: #3882f6;
    color: #f9faf8;
    padding: 64px 86px;
    display: flex;
    gap: 36px;
    align-items: center;
    border-radius: 16px;
}

.promo button {
    border: 2px solid #f9faf8;
    align-self: center;
}

.promo-title {
    font-size: 24px;
    font-weight: 600;
    padding-bottom: 16px;
}

.footer {
    background-color: #1f2937;
}

